Update main annotation and add in LoginByEmail
